Got the webserver to work correctly and the sendmessage handler to do its job

--- a/src/axum_webserver/templates/bot.html
+++ b/src/axum_webserver/templates/bot.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h2>Simple Form</h2>
-    <form action="/bot" method="post">
+    <form action="/sendmessage" method="post">
         <label for="number">Enter a Number:</label><br>
         <input type="number" maxlength="18" id="channel_id" name="channel_id" required><br><br>
         <label for="text">Enter a String:</label><br>
