Downloaded files now have correct name

--- a/src/axum_webserver/templates/download.html
+++ b/src/axum_webserver/templates/download.html
@@ -23,7 +23,7 @@
       <md-ripple for="control"></md-ripple>
       <p class="md-typescale-body-medium">File downloader</p>
       <md-outlined-text-field name= "filename" id= "filename" label="File name | Nombre del archivo" value="feetpic.png | fotopata.png"></md-outlined-text-field>
-      <md-outlined-button type="submit">Download</md-outlined-button>
+      <md-outlined-button download= "" type="submit">Download</md-outlined-button>
     </form>
     </div>
     <style>
